fix: overlapping images and text

--- a/src/components/PastHackathonsGallery/PastHackathonsGallery.scss
+++ b/src/components/PastHackathonsGallery/PastHackathonsGallery.scss
@@ -1,6 +1,4 @@
 .HACKMERCED {
-    height: 550px;
-
     h1 {
         font-weight: bold;
         color: black;
